--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,19 @@
+<!doctype html>
+<html>
+
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  {%- seo -%}
-  <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
-  {%- feed_meta -%}
-  {%- if jekyll.environment == 'production' and site.google_analytics -%}
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>{{ page.title }}</title>
+  <link href="/css/tailwind.css" rel="stylesheet">
+  <link href="/css/animate.css" rel="stylesheet" />
+  <link href="/css/swiper.css " rel="stylesheet">
+  <link href="/css/style.css " rel="stylesheet">
+
+  {%- if site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
-
-  {%- include custom-head.html -%}
-  
 </head>
+
+<body id="{{ current_page }}">
+
